[gd_scene load_steps=17 format=3 uid="uid://c10enx0bd523e"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_uoff8"]
[ext_resource type="Texture2D" uid="uid://bnyeia7xw77b8" path="res://icon.svg" id="2_0px1l"]
[ext_resource type="Script" path="res://buneco.gd" id="2_6u1s7"]
[ext_resource type="Texture2D" uid="uid://ttosdme30o51" path="res://Full.png" id="3_75ovt"]
[ext_resource type="AudioStream" uid="uid://cmuvrn3usoq6" path="res://punch_1.wav" id="4_sk06c"]
[ext_resource type="Script" path="res://enamy_base.gd" id="5_hspku"]
[ext_resource type="AudioStream" uid="uid://cg2rjfod5g42s" path="res://punch_2.wav" id="5_lmwed"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byny2"]
size = Vector2(1151, 26)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1mojw"]
height = 93.985

[sub_resource type="Animation" id="Animation_frc51"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_apgw1"]
resource_name = "death"
length = 0.18
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0024994, 0.0297794, 0.0601261, 0.0898006, 0.119505, 0.150205),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_164q0"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0592632, 0.121827, 0.180279, 0.220679, 0.259585, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_63u5s"]
resource_name = "punch"
length = 0.33
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0303933, 0.0605057, 0.0901293, 0.12006, 0.150261, 0.180524, 0.210117, 0.240739, 0.270305, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 19, 20, 21, 22, 23, 26]
}

[sub_resource type="Animation" id="Animation_dotgx"]
resource_name = "walk"
length = 0.2525
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0301028, 0.0602056, 0.0901707, 0.120162, 0.149666, 0.179741, 0.209453),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 2), Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.239932),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fg5v4"]
_data = {
"RESET": SubResource("Animation_frc51"),
"death": SubResource("Animation_apgw1"),
"idle": SubResource("Animation_164q0"),
"punch": SubResource("Animation_63u5s"),
"walk": SubResource("Animation_dotgx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lel2p"]
size = Vector2(130, 129)

[node name="game" type="Node2D" node_paths=PackedStringArray("buneco", "base", "base_inimiga")]
script = ExtResource("1_uoff8")
buneco = NodePath("buneco")
base = NodePath("base")
base_inimiga = NodePath("enamy_base")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(577, 443)

[node name="Chao" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_byny2")
one_way_collision_margin = 0.0
debug_color = Color(0, 0.596078, 0.717647, 0.419608)

[node name="Chao2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, -469)
shape = SubResource("RectangleShape2D_byny2")

[node name="buneco" type="RigidBody2D" parent="."]
position = Vector2(104, -96)
scale = Vector2(1.22668, 1.00016)
center_of_mass_mode = 1
center_of_mass = Vector2(0, 10)
script = ExtResource("2_6u1s7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="buneco"]
position = Vector2(-4.07605, 0.999841)
shape = SubResource("CapsuleShape2D_1mojw")

[node name="Label" type="Label" parent="buneco"]
offset_left = -16.0
offset_top = -131.0
offset_right = 27.0
offset_bottom = 68.0
scale = Vector2(0.706524, 0.560067)
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="dados" type="Label" parent="buneco"]
offset_left = -15.0
offset_top = 12.0
offset_right = 12.0
offset_bottom = 35.0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="buneco"]
texture = ExtResource("3_75ovt")
hframes = 6
vframes = 6
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="buneco/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_fg5v4")
}

[node name="puntch_1" type="AudioStreamPlayer" parent="buneco"]
stream = ExtResource("4_sk06c")

[node name="punch_2" type="AudioStreamPlayer" parent="buneco"]
stream = ExtResource("5_lmwed")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(576, 320)
enabled = false

[node name="Label" type="Label" parent="Camera"]
offset_left = 448.0
offset_top = -324.0
offset_right = 488.0
offset_bottom = -301.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Camera"]
offset_left = -240.0
offset_top = -320.0
offset_right = 260.0
offset_bottom = -280.0

[node name="const_bnt" type="Button" parent="Camera/HBoxContainer"]
layout_mode = 2
text = "          1         "
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="lin_btn2" type="Button" parent="Camera/HBoxContainer"]
layout_mode = 2
text = "          X         "
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="log_btn3" type="Button" parent="Camera/HBoxContainer"]
layout_mode = 2
text = "    log(x)   "
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="exp_btn4" type="Button" parent="Camera/HBoxContainer"]
layout_mode = 2
text = "        4^x       "
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="sin_btn5" type="Button" parent="Camera/HBoxContainer"]
layout_mode = 2
text = "       sin(x)    "
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="base" type="StaticBody2D" parent="."]
position = Vector2(72, 360)
script = ExtResource("5_hspku")

[node name="CollisionShape2D" type="CollisionShape2D" parent="base"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_lel2p")
debug_color = Color(0, 0.65098, 0.0745098, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="base"]
position = Vector2(-2, 2)
texture = ExtResource("2_0px1l")

[node name="Label" type="Label" parent="base"]
offset_left = -65.0
offset_top = -88.0
offset_right = -25.0
offset_bottom = -65.0
scale = Vector2(3.24, 1)
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="base"]
offset_left = -64.0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 168.0
metadata/_edit_use_anchors_ = true

[node name="enamy_base" type="StaticBody2D" parent="."]
position = Vector2(1090, 365)
script = ExtResource("5_hspku")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enamy_base"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_lel2p")
debug_color = Color(0.988235, 0, 0.317647, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="enamy_base"]
texture = ExtResource("2_0px1l")

[node name="Label" type="Label" parent="enamy_base"]
offset_left = -65.0
offset_top = -89.0
offset_right = -25.0
offset_bottom = -66.0
scale = Vector2(3.24, 1)

[node name="Label2" type="Label" parent="enamy_base"]
offset_left = -66.0
offset_top = 91.0
offset_right = 62.0
offset_bottom = 163.0

[connection signal="pressed" from="Camera/HBoxContainer/const_bnt" to="." method="_on_const_bnt_pressed"]
[connection signal="pressed" from="Camera/HBoxContainer/lin_btn2" to="." method="_on_lin_btn_2_pressed"]
[connection signal="pressed" from="Camera/HBoxContainer/log_btn3" to="." method="_on_log_btn_3_pressed"]
[connection signal="pressed" from="Camera/HBoxContainer/exp_btn4" to="." method="_on_exp_btn_4_pressed"]
[connection signal="pressed" from="Camera/HBoxContainer/sin_btn5" to="." method="_on_sin_btn_5_pressed"]
